src/objects/Global_Product__c.object
<CustomObject>
    <description>This hosts the global products</description>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>IF (
FIND (&quot;/&quot;, Path__c) == 0, Path__c, 

LEFT(Path__c, FIND ( &quot;/&quot;, Path__c)-1)

)</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Facing_Brand__c</fullName>
        <label>Consumer Facing Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Facing_Name__c</fullName>
        <label>Consumer Facing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Facing_Product_Description__c</fullName>
        <label>Consumer Facing Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GCR_Product_ID__c</fullName>
        <description>This is the GCR Product ID being used as an external ID</description>
        <externalId>true</externalId>
        <label>GCR Product ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GPID__c</fullName>
        <label>GPID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this Product is now inactive</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Path_Level__c</fullName>
        <label>New Path Level</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the parent global product going up to Brand. A Brand will have an empty parent product.</description>
        <inlineHelpText>Please populate with the parent Global Product</inlineHelpText>
        <label>Parent Product</label>
        <referenceTo>Global_Product__c</referenceTo>
        <relationshipLabel>Global Products</relationshipLabel>
        <relationshipName>Global_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Path_Level__c</fullName>
        <formula>IF
(
FIND(&quot;/&quot;, Path__c) = 0,
&quot;BRAND&quot;,
IF
( 
AND 
(
FIND(&quot;/&quot;, Path__c, FIND(&quot;/&quot;, Path__c) + 1 ) = 0, 
FIND(&quot;/&quot;, Path__c) &gt; 0
),
&quot;SEGMENT&quot;,
&quot;LOWER-LEVEL&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Path Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <description>This is the full path for the product starting at Brand</description>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Restriction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Postal Restriction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Level_Name__c</fullName>
        <label>Product Level Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Level_Number__c</fullName>
        <label>Product Level Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <formula>IF (FIND(&quot;/&quot;, Path__c) == 0, &quot;&quot;, 

IF (FIND ( &quot;/&quot;, Path__c, FIND ( &quot;/&quot;, Path__c)+1) == 0, 


RIGHT(Path__c, 
LEN (Path__c)
-
FIND(&quot;/&quot;, Path__c)

)

,


RIGHT(LEFT(Path__c, FIND ( &quot;/&quot;, Path__c, FIND ( &quot;/&quot;, Path__c)+1)-1), 
LEN (LEFT(Path__c, FIND ( &quot;/&quot;, Path__c, FIND ( &quot;/&quot;, Path__c)+1)-1))
-
FIND(&quot;/&quot;, LEFT(Path__c, FIND ( &quot;/&quot;, Path__c, FIND ( &quot;/&quot;, Path__c)+1)-1))

)



)

)</formula>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <label>Global Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Product__c</columns>
        <columns>Path__c</columns>
        <columns>Product_Level_Name__c</columns>
        <columns>Inactive__c</columns>
        <columns>GCR_Product_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>GPID_Search</fullName>
        <columns>NAME</columns>
        <columns>Path__c</columns>
        <columns>Segment__c</columns>
        <columns>Parent_Product__c</columns>
        <columns>Path_Level__c</columns>
        <columns>Brand__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GPID__c</field>
            <operation>equals</operation>
            <value>101153395</value>
        </filters>
        <label>GPID Search</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Specific_Path_Search</fullName>
        <columns>NAME</columns>
        <columns>Path__c</columns>
        <columns>Segment__c</columns>
        <columns>Parent_Product__c</columns>
        <columns>Path_Level__c</columns>
        <columns>Brand__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Path__c</field>
            <operation>contains</operation>
            <value>5+1</value>
        </filters>
        <label>Specific Path Search</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>test</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Path__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand__c</field>
            <operation>contains</operation>
            <value>Oral-B Power</value>
        </filters>
        <label>test</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>GP-{0000}</displayFormat>
        <label>Global Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Global Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>